# gestia-v2

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
auth-service/: .dockerignore  .gitignore  pyproject.toml
auth-service/app/: main.py
auth-service/app/aplicacion/: dto.py  mappers.py  servicios.py
auth-service/app/aplicacion/casos_uso/: autenticacion.py  gestion_permisos.py  gestion_roles.py  gestion_usuarios.py
auth-service/app/dominio/: eventos.py  modelos.py  servicios.py
auth-service/app/infraestructura/cache/: circuit_breaker.py  redis.py  redis_client.py
auth-service/app/infraestructura/persistencia/: orm.py  repositorios.py  unit_of_work.py
auth-service/app/infraestructura/seguridad/: hasher.py  jwt_manager.py
auth-service/app/interfaces/api/middlewares/: auth.py  error_handler.py
auth-service/app/interfaces/api/v1/: dependencies.py  esquemas.py
auth-service/app/interfaces/api/v1/routers/: auth.py  permissions.py  roles.py  usuarios.py
auth-service/migrations/: script.py.mako
auth-service/scripts/deploy/: create_admin_user.py
auth_service/: main.py
auth_service/api/endpoints/: auth.py  roles.py
auth_service/app/: Dockerfile
auth_service/app/aplicacion/: dto.py  servicios.py
auth_service/app/dominio/: excepciones.py  value_objects.py
auth_service/core/: security.py
auth_service/crud/: crud_role.py  crud_user.py
auth_service/db/: database.py
auth_service/migrations/: README  alembic.ini  env.py
auth_service/models/: models.py
auth_service/schemas/: role.py  token.py  user.py
auth_service/scripts/deploy/: create_admin_user.py  generate_jwks.py
backend/auth-service/: .env  Dockerfile  README.md  docker-compose.yml
backend/auth-service/migrations/: alembic.ini  env.py
backend/auth-service/requirements/: base.txt  dev.txt  prod.txt  test.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/mocks/: browser.ts  handlers.ts
frontend/src/pages/: AuditLogs.tsx  Dashboard.tsx  (+8 more)
(+64 files in other folders)
