[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Enterprise Authentication Service"
authors = ["Jules <jules@example.com>"] # Placeholder
readme = "README.md" # Optional, can be added later

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.100.0" # Use recent stable versions
pydantic = {extras = ["email"], version = "^2.0.0"} # For Pydantic v2 with email validation
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
alembic = "^1.11.0"
# For Pydantic Settings (if Pydantic v2)
pydantic-settings = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.24.0" # For testing FastAPI endpoints

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
